[gd_scene load_steps=3 format=3 uid="uid://cyd3ymc1eupi3"]

[ext_resource type="Theme" uid="uid://bf82ula2shj86" path="res://standardThemeForArticles.tres" id="1_087eq"]
[ext_resource type="Script" path="res://Rad.gd" id="1_s0c8u"]

[node name="Rad1" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 3
theme = ExtResource("1_087eq")
script = ExtResource("1_s0c8u")

[node name="leRSK" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 28.0
alignment = 1
editable = false

[node name="leArtikel" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 90.0
offset_top = 4.0
offset_right = 428.0
offset_bottom = 28.0
alignment = 1
editable = false

[node name="leAntal" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 430.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 28.0
alignment = 1

[node name="leApris" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 498.0
offset_top = 4.0
offset_right = 562.0
offset_bottom = 28.0
alignment = 1
editable = false

[node name="leSum" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 564.0
offset_top = 4.0
offset_right = 652.0
offset_bottom = 28.0
alignment = 1
editable = false

[node name="leSlag" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 654.0
offset_top = 4.0
offset_right = 728.0
offset_bottom = 28.0
alignment = 1

[node name="leAnsvar" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 730.0
offset_top = 4.0
offset_right = 802.0
offset_bottom = 28.0
alignment = 1

[node name="leVerks" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 804.0
offset_top = 4.0
offset_right = 878.0
offset_bottom = 28.0
alignment = 1

[node name="leAkt" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 880.0
offset_top = 4.0
offset_right = 952.0
offset_bottom = 28.0
alignment = 1

[node name="leObjekt" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 954.0
offset_top = 4.0
offset_right = 1028.0
offset_bottom = 28.0
alignment = 1

[node name="leProjekt" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 1030.0
offset_top = 4.0
offset_right = 1098.0
offset_bottom = 28.0
alignment = 1

[node name="leMotp" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 1100.0
offset_top = 4.0
offset_right = 1174.0
offset_bottom = 28.0
alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -26.0
offset_top = 7.0
offset_right = -13.0
offset_bottom = 26.0
text = "1."
horizontal_alignment = 2
vertical_alignment = 1
